re-arranged the grid layouts

--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -1,1 +1,3 @@
-<p>contact works!</p>
+<div class="contact-page-main" id="contact-page-main">
+    <div class="page-content-intro-hr"> drop a comment </div>
+</div>
