--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -5,9 +5,7 @@
         <i class="bi bi-code-slash"></i>
       </div>
       <div class="card-title">ui Designs</div>
-      <div class="card-description">
-        Responsive and mobile-friendly UI.
-      </div>
+      <div class="card-description">Responsive and mobile-friendly UI.</div>
       <div class="card-button">
         <button name="explore-1" class="explore" type="button">explore</button>
       </div>
@@ -18,9 +16,7 @@
         <i class="bi bi-plug"></i>
       </div>
       <div class="card-title">restful api</div>
-      <div class="card-description">
-         Fast and real-time data processing.
-      </div>
+      <div class="card-description">Fast and real-time data processing.</div>
       <div class="card-button">
         <button name="explore-2" class="explore" type="button">explore</button>
       </div>
@@ -49,62 +45,42 @@
     </div>
   </div>
 
- <div class="featured-items-hr"> featured items </div>
+  <div class="page-content-intro-hr">featured items</div>
 
   <div class="homepage-content-section feeds-container">
- 
     <div class="recent-project-container feed">
-      <div class="recent-project-img">
-        <img
-          class="project-img"
-          src="./img/projects/prj-mabunda.png"
-          alt="recent project"
-        />
-        <div class="project-img-buttons details">
-          <span class="img-button github"
-            ><i class="bi bi-github"></i> GitHub</span
-          >
-          <span class="img-button view"
-            ><i class="bi bi-cursor"></i> Website</span
-          >
-        </div>
+
+      <div class="details-heading">
+        featured project
       </div>
 
-      <div class="project-details">
-        <div class="prject-name details">recently completed project</div>
-        <div class="project-description details">
-          Mabunda Group
+      <div class="recent-project-details">
+        <div class="recent-project-img">
+          <img
+            class="project-img"
+            src="./img/projects/prj-mabunda.png"
+            alt="recent project"
+          />
         </div>
-        <div class="tech-stack details">
-          <div class="project-tech">Technologies</div>
-          <div class="project-tech-item">
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> HTML5</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> CSS3</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> SCSS</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> Bootstrap</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> SEO</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> Font Awesome</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> Angular</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> RESTful API</span
-            >
-            <span class="tech-item"
-              ><i class="bi bi-check-circle-fill"></i> GitHub</span
-            >
+        <div class="project-details">
+          <div class="heading details">Mabunda Group</div>
+
+          <!-- <div class="project-name details">Mabunda Group</div> -->
+          <div class="project-description details">
+            <div class="description">
+              A business website developed using web technologies such as HTML5,
+              SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
+              
+            </div>
+
+            <div class="online-options">
+              <div class="online git-hub-repo">
+                <i class="bi bi-github"></i> GitHub
+              </div>
+              <div class="online live-site">
+                <i class="bi bi-box-arrow-up-right"></i> View Online
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -113,25 +89,32 @@
     <div class="news-feed-container feed">
       <div class="feed-title">news headlines</div>
 
-       <div class="weather-container">
-
+      <div class="weather-container">
         <span class="weather-item title">Weather: </span>
-        <span class="weather-item"><i class="bi bi-calendar-minus"></i> 26-07-2025 </span>
-        <span class="weather-item"> <i class="bi bi-thermometer-half"></i> 22 °C</span> 
-        <span class="weather-item"> <i class="bi bi-cloud-sun"></i> Clear Sky </span>
-        <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span> 
-        
+        <span class="weather-item"
+          ><i class="bi bi-calendar-minus"></i> 26-07-2025
+        </span>
+        <span class="weather-item">
+          <i class="bi bi-thermometer-half"></i> 22 °C</span
+        >
+        <span class="weather-item">
+          <i class="bi bi-cloud-sun"></i> Clear Sky
+        </span>
+        <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span>
       </div>
 
       <div class="news-container">
-
         <div class="news">
           <img class="news-img" src="./img/misc/19.jpg" alt="recent project" />
           <div class="news-headline">accident - n14</div>
         </div>
 
         <div class="news">
-          <img class="news-img" src="./img/misc/mchunu2.jpg" alt="recent project" />
+          <img
+            class="news-img"
+            src="./img/misc/mchunu2.jpg"
+            alt="recent project"
+          />
           <div class="news-headline">mchunu scandal</div>
         </div>
 
@@ -139,10 +122,7 @@
           <img class="news-img" src="./img/misc/108.jpg" alt="recent project" />
           <div class="news-headline">more arrests</div>
         </div>
-        
       </div>
     </div>
-    
   </div>
-
 </div>
