--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,111 +1,110 @@
 <div class="projects-page-main" id="projects-page-main">
-  <section class="recent-project">
-    <div class="section-heading">project details</div>
 
-    <div class="project-details">
-      <div class="left-container">
-        <div class="project-img project-detail-item">
-          <div class="project-image-container">
-            <img
-              class="project-img"
-              src="./img/projects/prj-mabunda.png"
-              alt="recent project"
-            />
-          </div>
+   <div class="page-content-intro-hr"> project details </div>
 
-          <div class="project-name">mabunda group</div>
+  <section class="project-details">
+
+    <div class="top-container">
+
+      <div class="details-container top-left-details">
+        <div class="project-img-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-mabunda.png"
+            alt="recent project"
+          />
         </div>
-
-        <div class="project-description project-detail-item">
-          <div class="item-heading">project description</div>
-          <div class="item-details">
+        <div class="project-description">
+          <div class="heading">project</div>
+          <div class="details">
             <p>
               A business website developed using latest web technologies such as
               HTML5, SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
             </p>
-            <p>
-              The UI is designed to adopt various device screen sizes, ranging
-              from mobile phones to large sizes.
-            </p>
           </div>
           <div class="project-large-status">
             <span class="current-status git-status">
-              <i class="bi bi-check-circle-fill"></i>
-              GitHub
-            </span>
-            <span class="current-status complete-status">
-              <i class="bi bi-check-circle-fill"></i>
-              Completed
+              <i class="bi bi-github"></i>
+              GitHub Repo
             </span>
             <span class="current-status online-status">
-              <i class="bi bi-check-circle-fill"></i>
-              Online
+              <i class="bi bi-box-arrow-up-right"></i>
+              View Website
             </span>
           </div>
         </div>
       </div>
 
-      <div class="right-container">
-        <div class="project-concepts project-detail-item">
-          <div class="item-heading">Implemented concepts</div>
-
-          <div class="list-container">
-            <div class="item-details">
-              <ul>
-                <li>
-                  <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
-                </li>
-                <li>
-                  <i class="bi bi-stop-circle-fill"></i> Angular Framework
-                </li>
-                <li><i class="bi bi-stop-circle-fill"></i> RESTful APIs</li>
-              </ul>
-            </div>
-            <div class="item-details">
-              <ul>
-                <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
-                <li><i class="bi bi-stop-circle-fill"></i> GitHub and Git</li>
-                <li><i class="bi bi-stop-circle-fill"></i>SEO</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="project-features project-detail-item">
-          <div class="item-heading">features</div>
-
-          <div class="list-container">
-            <div class="item-details">
-              <ul>
-                <li>
-                  <i class="bi bi-check-square-fill"></i> Geo-location weather
-                </li>
-                <li><i class="bi bi-check-square-fill"></i> Photo Gallery</li>
-                <li><i class="bi bi-check-square-fill"></i> Google Maps</li>
-              </ul>
-            </div>
-            <div class="item-details">
-              <ul>
-                <li><i class="bi bi-check-square-fill"></i> Share buttons</li>
-                <li><i class="bi bi-check-square-fill"></i> Contact Form</li>
-
-                <li><i class="bi bi-check-square-fill"></i> Toggle themes</li>
-              </ul>
-            </div>
+       <div class="details-container top-right-details">
+        <div class="project-description">
+          <div class="heading">description</div>
+          <div class="details">
+            <ul>
+              <li>
+                <i class="bi bi-chevron-right"></i> Geo-location weather
+              </li>
+              <li><i class="bi bi-chevron-right"></i> Photo Gallery</li>
+              <li><i class="bi bi-chevron-right"></i> Google Maps</li>
+            </ul>
           </div>
         </div>
       </div>
+
+    </div>
+
+    <div class="bottom-container">
+
+      <div class="details-container project-concepts">
+        <div class="heading">concepts</div>
+        <div class="list-container">
+          <div class="details">
+            <ul>
+              <li>
+                <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
+              </li>
+              <li><i class="bi bi-stop-circle-fill"></i> Angular Framework</li>
+              <li><i class="bi bi-stop-circle-fill"></i> RESTful APIs</li>
+            </ul>
+          </div>
+          <div class="details">
+            <ul>
+              <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
+              <li><i class="bi bi-stop-circle-fill"></i> GitHub and Git</li>
+              <li><i class="bi bi-stop-circle-fill"></i>SEO</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="details-container project-features">
+        <div class="heading">features</div>
+
+        <div class="list-container">
+          <div class="details">
+            <ul>
+              <li>
+                <i class="bi bi-check-square-fill"></i> Geo-location weather
+              </li>
+              <li><i class="bi bi-check-square-fill"></i> Photo Gallery</li>
+              <li><i class="bi bi-check-square-fill"></i> Google Maps</li>
+            </ul>
+          </div>
+          <div class="details">
+            <ul>
+              <li><i class="bi bi-check-square-fill"></i> Share buttons</li>
+              <li><i class="bi bi-check-square-fill"></i> Contact Form</li>
+
+              <li><i class="bi bi-check-square-fill"></i> Toggle themes</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </section>
 
-  <section class="featured-projects">
-    <div class="section-heading">featured projects</div>
+  <div class="page-content-intro-hr"> featured projects </div>
 
-    <!-- <div class="section-statement">
-      Explore some of my recent project that were completed successfully. please
-      visit my GitHub repository to explore the rest of other projects.
-    </div> -->
-
+  <!-- <section class="featured-projects">
     <div class="cards-section">
       <div class="project-card">
         <div class="project-image-container">
@@ -199,5 +198,5 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </div>
