--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -10,7 +10,7 @@
         <div class="site-theme"><i class="bi bi-circle-half"></i></div>
       </div>
 
-      <p class="site-description">Showcasing Skills</p>
+      <p class="site-description">Front-End Developer</p>
       
     </div>
   </div>
