--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -7,7 +7,101 @@
     @media (max-width: map.get($breakpoints, $breakpoint)) {
       @content;
     }
-  } @else {
+  }
+
+  @else {
     @warn "No value found for breakpoint `#{$breakpoint}`.";
   }
+}
+
+@mixin page-content-intro-hr {
+  .page-content-intro-hr {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 0 20em;
+    font-size: $font-size-md + 2px;
+    margin: $spacing-md;
+
+    &::before,
+    &::after {
+      content: '';
+      flex: 1;
+      border-bottom: 1px solid #e5e5e5;
+    }
+
+    &:not(:empty)::before {
+      margin-right: 1.70em;
+    }
+
+    &:not(:empty)::after {
+      margin-left: 1.70em;
+    }
+  }
+
+  @include respond-to("pro-sm") {
+    .page-content-intro-hr {
+      padding: 0 14em;
+
+      &:not(:empty)::before {
+        margin-right: 1.60em;
+      }
+
+      &:not(:empty)::after {
+        margin-left: 1.60em;
+      }
+    }
+  }
+
+  @include respond-to("sm") {
+
+    .page-content-intro-hr {
+      padding: 0 8em;
+
+      &:not(:empty)::before {
+        margin-right: 1.50em;
+      }
+
+      &:not(:empty)::after {
+        margin-left: 1.50em;
+      }
+    }
+
+  }
+
+  @include respond-to("pre-sm") {
+    .page-content-intro-hr {
+      padding: 0 6em;
+
+      &:not(:empty)::before {
+        margin-right: 1.50em;
+      }
+
+      &:not(:empty)::after {
+        margin-left: 1.50em;
+      }
+    }
+  }
+
+  @include respond-to("pro-xs") {
+    .page-content-intro-hr {
+      padding: 0 4em;
+    }
+  }
+
+  @include respond-to("xs") { 
+     .page-content-intro-hr {
+            padding: 0 3em;
+            font-size: $font-size-sm;
+        }
+  }
+
+ @include respond-to("pre-xs") {
+        .page-content-intro-hr {
+            padding: 0 2em;
+        }
+    }
+
+
 }
