--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -1,6 +1,7 @@
 /* bind the following _partials to scss/main.scss */
 @forward 'home';
 @forward 'about';
+@forward 'skills-set';
 @forward 'projects';
 @forward 'contact';
 @forward 'page-not-found';
