--- a/src/app/layout/navbar/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar/navbar.component.html
@@ -1,19 +1,21 @@
 <div id="main-navbar">
-<nav class="navbar">
+  <nav class="navbar">
+    <button
+      class="navbar__toggle"
+      (click)="toggleMenu()"
+      aria-label="Toggle Menu"
+    >
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
 
-  <button class="navbar__toggle" (click)="toggleMenu()" aria-label="Toggle Menu">
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </button>
-
-  <ul class="navbar__menu" [class.active]="isMenuOpen">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/projects">Projects</a></li>
-    <li><a routerLink="/gallery">Gallery</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
-  </ul>
-
-</nav>
+    <ul class="navbar__menu" [class.active]="isMenuOpen">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/skills-set">Skills</a></li>
+      <li><a routerLink="/projects">Projects</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+    </ul>
+  </nav>
 </div>
