--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,9 +5,9 @@
     display: flex;
     flex-direction: column;
     row-gap: $spacing-md;
-    background-color: $light-primary-bg-color;
-    padding: $spacing-md;
-    border-radius: $spacing-sm;
+
+    border-top: 1px solid #e5e5e5;
+    padding-top: $spacing-lg;
 
     .footer-top-section {
         display: grid;
@@ -24,11 +24,10 @@
                 }
 
                 .introduction-img {
-                    border: 4px solid #e5e5e5;
                     float: left;
                     height: 60px;
                     margin: 0 12px 2px 0;
-                    border-radius: $spacing-sm;
+                    border-radius: $spacing-xs;
                 }
             }
         }
@@ -39,9 +38,9 @@
 
                 li {
                     list-style: square;
-                    margin-bottom: $spacing-xs;
+                    margin-bottom: $spacing-xs - 4px;
                     font-size: $font-size-md;
-                    margin-left: $spacing-md;
+                    margin-left: $spacing-lg;
 
                     a {
                         color: $light-primary-font-color;
@@ -61,9 +60,9 @@
 
                 li {
                     list-style: square;
-                    margin-bottom: $spacing-xs;
+                    margin-bottom: $spacing-xs - 4px;
                     font-size: $font-size-md;
-                    margin-left: $spacing-md;
+                    margin-left: $spacing-lg;
 
                     a {
                         color: $light-primary-font-color;
@@ -78,22 +77,20 @@
         }
 
         .item-contact-details {
-
             .contact-items {
                 .contact-item {
                     margin-bottom: $spacing-md;
 
                     .item {
                         margin: $spacing-sm 0;
-                        padding-left: $spacing-md;
-                        border-left: 1px solid #e5e5e5;
+                        padding-left: $spacing-sm;
 
                         a {
                             color: $light-primary-font-color;
                             text-decoration: none;
 
                             &:hover {
-                                text-decoration: underline;
+                                text-decoration: none;
                             }
                         }
 
@@ -116,23 +113,24 @@
         .footer-item {
             text-align: left;
             min-width: 25%;
-            // border: 1px solid #e5e5e5;
-            background-color: $light-neutral-bg-color;
-            padding: $spacing-md;
-            border-radius: $spacing-sm;
+            border-radius: $spacing-xs;
 
             .footer-item-title {
+                   margin-bottom: $spacing-xs + 4px;
                 text-transform: uppercase;
-                margin-bottom: $spacing-sm;
+                background-color: $light-primary-bg-color;
+                border-radius: $spacing-xs;
+                padding: $spacing-xs $spacing-sm;
+                font-size: $font-size-sm;
             }
         }
     }
 
     .footer-bottom-section {
-        background-color: $light-neutral-bg-color;
-        padding: $spacing-md;
-        border-radius: $spacing-sm;
+        background-color: $light-primary-bg-color;
+        padding: $spacing-sm;
         font-size: $font-size-sm + 2px;
+        border-radius: $spacing-xs;
     }
 
     //Media queries for responsive design
@@ -147,7 +145,7 @@
             }
         }
 
-         .footer-bottom-section {
+        .footer-bottom-section {
             font-size: $font-size-sm;
         }
     }
@@ -163,6 +161,6 @@
             .item-technology {
                 display: none;
             }
-        }  
+        }
     }
 }
