finalized the grid layouts for home page and footer

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -49,10 +49,7 @@
 
   <div class="homepage-content-section feeds-container">
     <div class="recent-project-container feed">
-
-      <div class="details-heading">
-        featured project
-      </div>
+      <div class="details-heading">featured project</div>
 
       <div class="recent-project-details">
         <div class="recent-project-img">
@@ -62,23 +59,26 @@
             alt="recent project"
           />
         </div>
+
         <div class="project-details">
           <div class="heading details">Mabunda Group</div>
 
-          <!-- <div class="project-name details">Mabunda Group</div> -->
           <div class="project-description details">
             <div class="description">
               A business website developed using web technologies such as HTML5,
               SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
-              
             </div>
 
             <div class="online-options">
               <div class="online git-hub-repo">
                 <i class="bi bi-github"></i> GitHub
               </div>
+
+              <div class="online more">
+                <i class="bi bi-chevron-compact-right"></i> Details
+              </div>
               <div class="online live-site">
-                <i class="bi bi-box-arrow-up-right"></i> View Online
+                <i class="bi bi-box-arrow-up-right"></i> Online
               </div>
             </div>
           </div>
