--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -48,18 +48,13 @@
 
         <div class="contact-item">
           <div class="item">
-            <div class="contact-number">(+27)79 691 0468</div>
-            <div class="contact-email">
+            <div class="item contact-number">(+27)79 691 0468</div>
+            <div class="item contact-email">
               <a href="mailto:yingishirinda@gmail.com"
                 >yingishirinda&#64;gmail.com</a
               >
             </div>
-          </div>
-        </div>
-
-        <div class="contact-item">
-          <div class="item">
-            <div class="contact-pages">
+             <div class="item contact-pages">
               <i class="bi bi-linkedin"></i>
               <i class="bi bi-github"></i>
               <i class="bi bi-whatsapp"></i>
@@ -67,7 +62,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
