--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -82,8 +82,10 @@
                     margin-bottom: $spacing-md;
 
                     .item {
-                        margin: $spacing-sm 0;
-                        padding-left: $spacing-sm;
+                        display: flex;
+                        flex-direction: column;
+                        row-gap: 10px;
+                        padding-left: $spacing-xs;
 
                         a {
                             color: $light-primary-font-color;
@@ -136,11 +138,10 @@
     //Media queries for responsive design
     @include respond-to("pro-sm") {
         .footer-top-section {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
             row-gap: 15px;
 
-            .item-introduction,
-            .item-resources {
+            .item-introduction {
                 display: none;
             }
         }
@@ -153,8 +154,20 @@
     @include respond-to("pro-xs") {
 
         .footer-top-section {
-            display: flex;
-            flex-direction: column;
+            grid-template-columns: 1fr 1fr;
+
+            .item-resources,
+            .item-introduction
+             {
+                display: none;
+            }
+        }
+    }
+
+    @include respond-to("xs") {
+
+        .footer-top-section {
+            grid-template-columns: 1fr ;
 
             .item-resources,
             .item-introduction,
